samples/_failures_safe/1761192739_239b19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c8195b4.c: In function ‘main’:
./samples/SAFE/__tmp_6c8195b4.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("Matrix multiplication failed: integer overflow or memory allocation error.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_6c8195b4.c:153:9: error: expected declaration or statement at end of input
